# koryphaioszagchallenge

./: .gitignore  .gitmodules  README.md  build.sh  verify.sh
docs/: BACKEND_SPEC.md  NATIVE_ACCESSIBILITY.md  NATIVE_CODEX_PROVIDER.md  NATIVE_DATA_MIGRATION.md  NATIVE_PACKAGING.md  NATIVE_PERFORMANCE.md  NATIVE_PROJECT_KNOWLEDGE.md  NATIVE_PROVIDER_BOUNDARY.md  NATIVE_RENDERING.md  NATIVE_SECRET_STORAGE.md  NATIVE_SESSION_LIFECYCLE.md  NATIVE_TLS_CHAIN.md  PARITY_BASELINE.md  PROVENANCE.md  RELEASE_STATUS.md  UI_SPEC.md  ZAG_COMPILER_PATCH.md  ZAG_NOTES.md
frontend/: README.md
frontend/public/: api.js  app.js  icons.js  index.html  theme.css  toolkit.js
packaging/: koryphaios.desktop
probe/: aeadtest.zag  bits  bits.zag  capture.zag  chdump.zag  conn.zag  dnstest.zag  empty.zag  eptest.zag  feat  feat.zag  feat2  feat2.zag  feat3.zag  forktest.zag  hashtest.zag  hello  hello.zag  optbug.zag  optfull.zag  optslice.zag  pipediag.zag  pipetest.zag  rawtls.zag  rev_a.zag  rev_main.zag  rr2.zag  rrtls.zag  scale  scale.zag  sp2.zag  sptls.zag  srvtest.zag  storetest.zag  tcp  tcp.zag  tlstest.zag  tooltest.zag  wraptls.zag  x25test.zag  (+2 more)
probe/dia/: a.zag  b.zag  main  (+2 more)
reference/Koryphaios/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
reference/Koryphaios/desktop/src-tauri/capabilities/: default.json
reference/Koryphaios/desktop/src-tauri/src/: config.rs  error.rs  indexer.rs  lib.rs  main.rs
src/: main.zag
tools/: install.sh  package-selftest.sh  package.sh  performance-gate.sh  repository-audit-selftest.sh  repository-audit.sh  uninstall.sh
(+704 files in other folders)
