[package]
name = "koryphaios-desktop"
version = "1.0.22"
description = "Koryphaios — The Autonomous Workspace for 100% AI-Generated Code"
authors = ["Sylorlabs"]
edition = "2021"

[lib]
name = "koryphaios_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "koryphaios-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"], default-features = false }
tokio = { version = "1", features = ["time"] }
ignore = "0.4.25"
regex = "1.12.3"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
